# R-Type

./: .gitignore  CMakeLists.txt  ECS.md  README.md  RFC.md
Client/: CMakeLists.txt
Client/Headers/: Client.hpp  Clock.hpp  Components.hpp  Entity.hpp  Game.hpp  GameProperties.hpp  Lobby.hpp
Client/Headers/GraphicSystems/: Anchor.hpp  GraphicComponents.hpp  GraphicSystem.hpp  SpritesProperties.hpp
Client/Headers/GraphicSystems/SFML/: SfmlSystem.hpp  Sprite.hpp  Text.hpp
Client/Headers/KeysDetection/: KeysCode.hpp
Client/Sources/: Client.cpp  Clock.cpp  Game.cpp  Lobby.cpp  main.cpp
Client/Sources/GraphicSystems/: GraphicSystem.cpp
Client/Sources/GraphicSystems/SFML/: SfmlSystem.cpp  Sprite.cpp  Text.cpp
Libs/ECS/: CMakeLists.txt
Libs/ECS/Headers/: Registry.hpp  SparseArray.hpp
Libs/ECS/Sources/: Registry.cpp
Libs/LibLoader/: CMakeLists.txt
Libs/LibLoader/Headers/: Lib.hpp
Libs/LibLoader/Headers/Exceptions/: DlError.hpp  FileNotFound.hpp  NullReference.hpp
Libs/LibLoader/Sources/: Lib.cpp
Libs/LibLoader/Sources/Exceptions/: DlError.cpp  FileNotFound.cpp  NullReference.cpp
Libs/Platformer/: CMakeLists.txt
Libs/Platformer/Assets/Map/: maplvl1.txt  maplvl2.txt  maplvl3.txt
Libs/Platformer/Headers/: Broadcast.hpp  Game.hpp  Map.hpp  Menu.hpp  Options.hpp  Player.hpp  Systems.hpp
Libs/Platformer/Headers/Components/: Clickable.hpp  Clock.hpp  Collider.hpp  Color.hpp  Damage.hpp  Health.hpp  Id.hpp  Input.hpp  InputInfo.hpp  Name.hpp  Position.hpp  RectangleShape.hpp  SpriteFrame.hpp  Text.hpp  Velocity.hpp  returnValue.hpp
Libs/Platformer/Sources/: Broadcast.cpp  Game.cpp  Map.cpp  Menu.cpp  Options.cpp  Player.cpp  main.cpp
Libs/Platformer/Sources/Systems/: CollisionSystem.cpp  MvmtSystem.cpp  SpriteFrameSystem.cpp
Server/: CMakeLists.txt  main.cpp
Server/Headers/: Lobby.hpp  Map.hpp  Server.hpp  Systems.hpp
Server/Headers/Components/: Clock.hpp  Collider.hpp  Damage.hpp  Deleted.hpp  Id.hpp  Name.hpp  Projectile.hpp  SpriteFrame.hpp  Velocity.hpp
Server/Sources/: CheckArgs.cpp  Clock.cpp  Lobby.cpp  Room.cpp  Server.cpp  ServerLogic.cpp  Usefull.cpp
Server/Sources/Systems/: CollisionSystem.cpp  FireSystem.cpp  LoseCondition.cpp  MvmtSystem.cpp  MvmtSystemBullets.cpp  MvmtSystemMonsters.cpp
SphinxDoc/: conf.py  index.rst
SphinxDoc/_static/: custom.css
SphinxDoc/general/: client.rst  clock.rst  ecs-engine.rst  server.rst
SphinxDoc/general/client/: graphic-system.rst  keys-inputs.rst
assets/maps/: map1.txt  map2.txt  map3.txt  mapsPaths.txt
